<resources>
    <string name="app_name">ProjectPortal</string>
    <string name="project_title">Project Title</string>
    <string name="project_description">Project Description</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="keywords">Keywords:</string>
    <string name="authors">Authors:</string>
    <string name="links">Links:</string>
    <string name="favorite">Favorite</string>
    <string-array name="project_list">
        <item>ProjectPortal</item>
        <item>Weather Forecast</item>
        <item>Connect Me</item>
        <item>Whats Eat</item>
    </string-array>
</resources>